# dbproc

./: README.md  dbcommon.sh  exportdb.sh  exportdb_cron.sh  importdb.sh  recordPP.vbs  ubp_dbcommon.sh  ubp_exportdb.sh  ubp_exportdb_cron.sh  ubp_importdb.sh
cmake/t1/: CMakeCache.txt
cmake/t2/: CMakeLists.txt
cmake/t2/src/: CMakeLists.txt
cmake/t3/: CMakeLists.txt  run.sh
cmake/t3/lib/: CMakeLists.txt  hello.c
cmake/t4/: CMakeLists.txt  run.sh
cmake/t4/src/: CMakeLists.txt
collection/: collect.sh  corefileinfo.sh  dbinfo.sh  report.sh  sysinfo.sh  traceinfo.sh
cpp/example/: system_output.cpp
cpp/modules/ftp/: ftp_client.cpp  ftp_client.h  ftp_def.hpp  ftp_service.cpp  ftp_service.h  ftp_trace.hpp
cpp/mq_dispatch/: cm_msg_commands.cpp  mq_dispatch.cpp  mq_dispatch.hpp  mq_dispatch_test.cpp
dbproc/: dbcommon.sh  exportdb.sh  importdb.sh  input.xml  v21.xml
docs/: cal.txt  isp.txt  linux_tips.txt  mini.txt  resign.txt  tech_list.txt  婴儿心理学.doc  美文.txt
docs/how/: 怎样锻炼上肢力量.txt  怎样锻炼记忆力.txt  条码.txt
docs/tips/: cmake.txt  gettext.txt  linux.txt  mysql.txt  osx.txt  source_insight.txt  svn.txt  thinkpad.txt  veritas.txt  windows.txt  xml.tip
jobs/: resume.txt
maintain/:  maintain_msg_handler.cpp  maintain_agent.cpp
practice/: proc_trace.sh
redis/: install.txt
veritas/: CMakeLists.txt  changeip.sh  clean.sh  clean_local.sh  configVcsEnv.sh  config_appdir.sh  config_vvr.sh  config_vxvm.sh  copy_agent.sh  create_maincf.sh  hacommon.sh  installsfha.sh  recover.sh  reinstallUBP.sh  setDiskId.sh  startha.sh  startsfha.sh  stopha.sh
veritas/conf/: eAPPTypes.cf  installer.response  maincf_pri.template  maincf_sec.template  my.cnf.vrts  startsfha.response  vcs.conf
veritas/eAPPApplication/: clean  monitor  offline  online
(+3 files in other folders)
